--- a/slr-renting/src/main/java/vista/PanelAdmin.fxml
+++ b/slr-renting/src/main/java/vista/PanelAdmin.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
@@ -10,43 +12,27 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="576.0" prefWidth="586.0"
-            style="-fx-background-color: BLACK;"
-            xmlns="http://javafx.com/javafx/24.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controlador.PanelAdminControlador">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="586.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.PanelAdminControlador">
 
    <children>
 
       <!-- ============================= -->
       <!--   LOGO DE FONDO CENTRADO      -->
       <!-- ============================= -->
-      <ImageView layoutX="0" layoutY="0"
-                 fitWidth="586" fitHeight="576"
-                 preserveRatio="true"
-                 opacity="0.15"
-                 pickOnBounds="false"
-                 style="-fx-alignment: center;">
+      <ImageView fitHeight="576" fitWidth="586" layoutX="0" layoutY="0" opacity="0.15" pickOnBounds="false" preserveRatio="true" style="-fx-alignment: center;">
          <image>
             <Image url="@logo.jpg" />
          </image>
       </ImageView>
 
    
-      <HBox layoutX="0.0" layoutY="0.0"
-            prefWidth="586.0"
-            spacing="20.0"
-            style="-fx-padding: 10 20; -fx-background-color: #b99a41;">
+      <HBox layoutX="0.0" layoutY="0.0" prefWidth="586.0" spacing="20.0" style="-fx-padding: 10 20; -fx-background-color: #b99a41;">
 
          <children>
 
             <!-- LOGO PEQUEÑO DEL HEADER -->
-            <HBox spacing="10.0" alignment="CENTER_LEFT">
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" preserveRatio="true">
                      <image>
@@ -54,7 +40,7 @@
                      </image>
                   </ImageView>
 
-                  <Text text="Panel de administración" fill="black">
+                  <Text fill="black" text="Panel de administración">
                      <font>
                         <Font name="Gill Sans MT Condensed" size="26.0" />
                      </font>
@@ -65,11 +51,7 @@
             <Pane HBox.hgrow="ALWAYS" />
 
             <!-- COMBO ADMIN -->
-            <ComboBox fx:id="comboAdmin"
-                      promptText="Admin"
-                      prefWidth="120.0"
-                      style="-fx-background-color: black; -fx-text-fill: #b99a41; -fx-background-radius: 6;"
-                      onAction="#logout">
+            <ComboBox fx:id="comboAdmin" onAction="#logout" prefWidth="120.0" promptText="Admin" style="-fx-background-color: black; -fx-text-fill: #b99a41; -fx-background-radius: 6;">
 
                <items>
                   <FXCollections fx:factory="observableArrayList">
@@ -86,32 +68,19 @@
       <!--         BOTONES ADMIN         -->
       <!-- ============================= -->
 
-      <ButtonBar layoutX="62.0" layoutY="449.0"
-                 prefHeight="74.0" prefWidth="414.0">
+      <ButtonBar layoutX="62.0" layoutY="449.0" prefHeight="74.0" prefWidth="414.0">
          <buttons>
 
-            <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="103.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Alquiler" />
+            <Button mnemonicParsing="false" onAction="#irAAlquileres" prefHeight="33.0" prefWidth="103.0" style="-fx-background-color: #b99a41;" text="Alquiler" />
 
-            <Button mnemonicParsing="false" prefHeight="32.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Usuarios"
-                    onAction="#irAUsuarios" />
+            <Button mnemonicParsing="false" onAction="#irAUsuarios" prefHeight="32.0" style="-fx-background-color: #b99a41;" text="Usuarios" />
 
-            <Button mnemonicParsing="false" prefHeight="34.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Chofer"
-                    onAction="#irAChofer" />
+            <Button mnemonicParsing="false" onAction="#irAChofer" prefHeight="34.0" style="-fx-background-color: #b99a41;" text="Chofer" />
 
-            <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="110.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Coches"
-                    onAction="#irACoches" />
+            <Button mnemonicParsing="false" onAction="#irACoches" prefHeight="33.0" prefWidth="110.0" style="-fx-background-color: #b99a41;" text="Coches" />
 
          </buttons>
       </ButtonBar>
 
    </children>
 </AnchorPane>
-
