--- a/slr-renting/src/main/java/vista/Adminchofer.fxml
+++ b/slr-renting/src/main/java/vista/Adminchofer.fxml
@@ -1,40 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AdminChoferControlador">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="451.0" prefWidth="648.0"
+            style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controlador.AdminChoferControlador">
+
    <children>
-      <TableView fx:id="tblChofer" layoutY="175.0" prefHeight="275.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
-        <columns>
-          <TableColumn fx:id="clmID" prefWidth="58.4000244140625" text="ID" />
-          <TableColumn fx:id="clmNombre" prefWidth="200.80001831054688" text="Nombre" />
-            <TableColumn fx:id="clmTlf" prefWidth="140.79998779296875" text="Teléfono" />
-            <TableColumn fx:id="clmDni" prefWidth="135.20001220703125" text="DNI" />
-            <TableColumn fx:id="clmDisp" prefWidth="104.800048828125" text="Disposicion" />
-        </columns>
+
+      <!-- Top bar (corporativa) -->
+      <HBox layoutX="0.0" layoutY="0.0" prefHeight="78.0" prefWidth="648.0"
+            style="-fx-background-color: #0b0b0b; -fx-border-color: #3b3320; -fx-border-width: 0 0 1 0;">
+         <padding>
+            <Insets top="14" right="16" bottom="14" left="16"/>
+         </padding>
+
+         <!-- Logo -->
+         <ImageView fitHeight="36.0" fitWidth="36.0" preserveRatio="true">
+            <image>
+               <Image url="@logo.jpg"/>
+            </image>
+         </ImageView>
+
+         <VBox spacing="2" style="-fx-padding: 0 0 0 12;">
+            <Text fill="#ffd666" text="Seville Luxury Renting">
+               <font><Font size="14.0"/></font>
+            </Text>
+            <Text fill="#b5b5b5" text="Administración de chófers">
+               <font><Font size="11.0"/></font>
+            </Text>
+         </VBox>
+
+         <Region HBox.hgrow="ALWAYS"/>
+
+         <Button fx:id="btnVolver" mnemonicParsing="false" text="Volver"
+                 style="-fx-background-color: transparent; -fx-border-color: #ffd666; -fx-border-width: 1.2; -fx-text-fill: #ffd666; -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 6 14 6 14;"/>
+      </HBox>
+
+      <!-- Title -->
+      <Text layoutX="16.0" layoutY="116.0" fill="WHITE" text="Panel administración de chófers">
+         <font><Font size="22.0"/></font>
+      </Text>
+
+      <!-- Actions -->
+      <ButtonBar layoutX="355.0" layoutY="102.0" prefHeight="34.0" prefWidth="277.0">
+         <buttons>
+            <Button fx:id="btnAñadir" mnemonicParsing="false" text="Añadir"
+                    style="-fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-weight: bold; -fx-background-radius: 16; -fx-padding: 6 14 6 14;"/>
+            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar"
+                    style="-fx-background-color: #1a1a1a; -fx-border-color: #3b3320; -fx-border-width: 1.2; -fx-text-fill: #f5f5f5; -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 6 14 6 14;"/>
+            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar"
+                    style="-fx-background-color: transparent; -fx-border-color: #b34a4a; -fx-border-width: 1.2; -fx-text-fill: #ffb3b3; -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 6 14 6 14;"/>
+         </buttons>
+      </ButtonBar>
+
+      <!-- Table -->
+      <TableView fx:id="tblChofer"
+                 layoutX="16.0" layoutY="144.0"
+                 prefHeight="291.0" prefWidth="616.0"
+                 style="-fx-background-color: #111111; -fx-border-color: #3b3320; -fx-border-width: 1.2; -fx-background-radius: 14; -fx-border-radius: 14;">
+
+         <!-- MISMO CSS que Admincoche (forma correcta para evitar el error) -->
+         <stylesheets>
+            <URL value="@admin-table.css"/>
+         </stylesheets>
+
+         <columns>
+            <TableColumn fx:id="clmID"     prefWidth="70.0"  text="ID"/>
+            <TableColumn fx:id="clmNombre" prefWidth="210.0" text="Nombre"/>
+            <TableColumn fx:id="clmTlf"    prefWidth="130.0" text="Teléfono"/>
+            <TableColumn fx:id="clmDni"    prefWidth="120.0" text="DNI"/>
+            <TableColumn fx:id="clmDisp"   prefWidth="86.0"  text="Disponible"/>
+         </columns>
+
       </TableView>
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de Chofers"
-            wrappingWidth="634.6878051757812">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Text>
-      <Button fx:id="btnVolver" layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
-      <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0">
-        <buttons>
-          <Button fx:id="btnAñadir" minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
-            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar" />
-            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar" />
-        </buttons>
-      </ButtonBar>
    </children>
+
 </AnchorPane>
