--- a/slr-renting/src/main/java/vista/Admincoche.fxml
+++ b/slr-renting/src/main/java/vista/Admincoche.fxml
@@ -1,58 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-            prefHeight="451.0" prefWidth="648.0" 
-            style="-fx-background-color: black;" 
-            xmlns="http://javafx.com/javafx/24.0.1" 
-            xmlns:fx="http://javafx.com/fxml/1" 
+<BorderPane prefHeight="451.0" prefWidth="648.0"
+            style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controlador.AdminCocheControlador">
 
-   <children>
+    <top>
+        <HBox prefHeight="78.0"
+              style="-fx-background-color: #0b0b0b; -fx-border-color: #3b3320; -fx-border-width: 0 0 1 0;">
+            <padding>
+                <Insets top="14" right="16" bottom="14" left="16"/>
+            </padding>
 
-      <TableView fx:id="tblCoche" layoutY="175.0" prefHeight="275.0" prefWidth="648.0"
-                 style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-border-width: 6px;">
-        <columns>
-          
-          <TableColumn fx:id="clmBast" prefWidth="58.4000244140625" text="Nº Bastidor" />
-          <TableColumn fx:id="clmMtr" prefWidth="120.0" text="Matricula" />
-          <TableColumn fx:id="clmMarca" prefWidth="146.39996337890625" text="Marca" />
-          <TableColumn fx:id="clmMdl" prefWidth="84.0" text="Modelo" />
-          <TableColumn fx:id="clmPr" prefWidth="126.40008544921875" text="Precio" />
-          <TableColumn fx:id="clmDisp" prefWidth="99.199951171875" text="Disponibilidad" />
+            <ImageView fitHeight="36.0" fitWidth="36.0" preserveRatio="true">
+                <image>
+                    <Image url="@logo.jpg"/>
+                </image>
+            </ImageView>
 
-         
-          <TableColumn fx:id="clmImg" prefWidth="150.0" text="Imagen URL" />
+            <VBox spacing="2" style="-fx-padding: 0 0 0 12;">
+                <Text fill="#ffd666" text="Seville Luxury Renting">
+                    <font><Font size="14.0"/></font>
+                </Text>
+                <Text fill="#b5b5b5" text="Administración de coches">
+                    <font><Font size="11.0"/></font>
+                </Text>
+            </VBox>
 
-        </columns>
-      </TableView>
+            <Region HBox.hgrow="ALWAYS"/>
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="94.0"
-            strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Panel administracion de coches"
-            wrappingWidth="634.6878051757812">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Text>
+            <Button fx:id="btnVolver" mnemonicParsing="false" text="Volver"
+                    style="-fx-background-color: transparent; -fx-border-color: #ffd666; -fx-border-width: 1.2;
+                           -fx-text-fill: #ffd666; -fx-background-radius: 18; -fx-border-radius: 18;
+                           -fx-padding: 8 16 8 16; -fx-font-weight: bold;"/>
+        </HBox>
+    </top>
 
-      <Button fx:id="btnVolver" layoutX="573.0" layoutY="22.0" mnemonicParsing="false" text="Volver" />
+    <center>
+        <StackPane>
+            <padding>
+                <Insets top="18" right="18" bottom="18" left="18"/>
+            </padding>
 
-      <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0">
-        <buttons>
-          <Button fx:id="btnAñadir" minWidth="56.0" mnemonicParsing="false" prefHeight="14.0" text="Añadir" />
-          <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar" />
-          <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar" />
-        </buttons>
-      </ButtonBar>
+            <VBox maxWidth="1200" spacing="14">
 
-   </children>
+                <HBox spacing="12">
+                    <Text fill="WHITE" text="Panel administración de coches">
+                        <font><Font size="22.0"/></font>
+                    </Text>
 
-</AnchorPane>
+                    <Region HBox.hgrow="ALWAYS"/>
+
+                    <ButtonBar>
+                        <buttons>
+                            <Button fx:id="btnAñadir" mnemonicParsing="false" text="Añadir"
+                                    style="-fx-background-color: #ffd666; -fx-text-fill: #111111;
+                                           -fx-font-weight: bold; -fx-background-radius: 18;
+                                           -fx-padding: 8 16 8 16;"/>
+                            <Button fx:id="btnEditar" mnemonicParsing="false" text="Editar"
+                                    style="-fx-background-color: #1a1a1a; -fx-border-color: #3b3320;
+                                           -fx-border-width: 1.2; -fx-text-fill: #f5f5f5;
+                                           -fx-background-radius: 18; -fx-border-radius: 18;
+                                           -fx-padding: 8 16 8 16; -fx-font-weight: bold;"/>
+                            <Button fx:id="btnBorrar" mnemonicParsing="false" text="Borrar"
+                                    style="-fx-background-color: transparent; -fx-border-color: #b34a4a;
+                                           -fx-border-width: 1.2; -fx-text-fill: #ffb3b3;
+                                           -fx-background-radius: 18; -fx-border-radius: 18;
+                                           -fx-padding: 8 16 8 16; -fx-font-weight: bold;"/>
+                        </buttons>
+                    </ButtonBar>
+                </HBox>
+
+                <TableView fx:id="tblCoche" VBox.vgrow="ALWAYS"
+                           style="
+                               -fx-background-color: #111111;
+                               -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                               -fx-background-radius: 14; -fx-border-radius: 14;
+
+                               -fx-control-inner-background: #101010;
+                               -fx-control-inner-background-alt: #151515;
+                               -fx-table-cell-border-color: #2a2416;
+                               -fx-selection-bar: #ffd666;
+                               -fx-selection-bar-non-focused: #3b3320;
+                               -fx-text-background-color: #f5f5f5;
+                           ">
+
+                    <columns>
+                        <TableColumn fx:id="clmBast" prefWidth="110.0" text="Bastidor"/>
+                        <TableColumn fx:id="clmMtr"  prefWidth="130.0" text="Matrícula"/>
+                        <TableColumn fx:id="clmMarca" prefWidth="140.0" text="Marca"/>
+                        <TableColumn fx:id="clmMdl"  prefWidth="140.0" text="Modelo"/>
+                        <TableColumn fx:id="clmPr"   prefWidth="120.0" text="Precio"/>
+                        <TableColumn fx:id="clmDisp" prefWidth="120.0" text="Disponible"/>
+                        <TableColumn fx:id="clmImg"  prefWidth="250.0" text="Imagen URL"/>
+                    </columns>
+
+                </TableView>
+
+            </VBox>
+        </StackPane>
+    </center>
+
+</BorderPane>
