--- a/slr-renting/src/main/java/vista/Añadircoche.fxml
+++ b/slr-renting/src/main/java/vista/Añadircoche.fxml
@@ -3,62 +3,155 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="fondo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="788.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.AñadirCocheControlador">
-   <children>
-      <Line endX="170.0" endY="49.9999885559082" layoutX="-2.0" layoutY="-1.0" startX="167.79290771484375" startY="583.2070922851562" stroke="#fcdb00" />
-      <Line endX="260.9000244140625" endY="51.00000762939453" layoutX="450.0" layoutY="-1.0" startX="260.9000244140625" startY="582.0" stroke="#fad900" />
-      <Line endX="-100.5" endY="341.5" layoutX="270.0" layoutY="-292.0" startX="440.4000244140625" startY="341.5" stroke="#fcdb00" />
-      <Text fill="WHITE" layoutX="261.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <Text fill="#c4c4c2" layoutX="353.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ingrese datos para añadir coche" />
-      <Text fill="WHITE" layoutX="185.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nº de Bastidor" />
-      <Text fill="WHITE" layoutX="185.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Marca" wrappingWidth="73.38397216796875" />
-      <Text fill="WHITE" layoutX="185.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modelo" />
-      <Text fill="WHITE" layoutX="185.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matricula" wrappingWidth="73.38397216796875" />
-      
-            <TextField fx:id="txtBastidor" layoutX="185.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtMarca" layoutX="185.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtModelo" layoutX="185.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtMatricula" layoutX="185.0" layoutY="352.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtPrecioDiario" layoutX="182.0" layoutY="409.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      
-      
-      <Button fx:id="btnRegistrar" layoutX="222.0" layoutY="541.0" mnemonicParsing="false" onAction="#registrarCoche" prefHeight="32.0" prefWidth="186.0" style="-fx-border-radius: 16; -fx-background-radius: 16; -fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black;" text="Registrar" wrapText="true">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </Button>
-      
-      <Text fill="WHITE" layoutX="185.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Precio diario" wrappingWidth="73.38397216796875" />
-      <Line endX="-100.5" endY="341.5" layoutX="267.0" layoutY="240.0" startX="443.4000244140625" startY="341.5" stroke="#fcdb00" />
-      
-      
-      <Text fill="WHITE" layoutX="616.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Descripcion" />
-      <TextField fx:id="txtDescripcion" layoutX="472.0" layoutY="176.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtPlazas" layoutX="472.0" layoutY="232.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtPotencia" layoutX="472.0" layoutY="292.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <Text fill="WHITE" layoutX="631.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Plazas" />
-      <Text fill="WHITE" layoutX="625.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Potencia" />
-      <Text fill="WHITE" layoutX="631.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Motor" />
-      <TextField fx:id="txtMotor" layoutX="472.0" layoutY="352.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <TextField fx:id="txtVelocidadMax" layoutX="472.0" layoutY="409.0" prefHeight="26.0" prefWidth="222.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-      <Text fill="WHITE" layoutX="631.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="V Max" />
-      
-      
-	<Text fill="WHITE" layoutX="405.0" layoutY="478.0" strokeType="OUTSIDE" strokeWidth="0.0" text="URL Imagen" />
-	<TextField fx:id="txtImagenURL" layoutX="264.0" layoutY="494.0" prefHeight="26.0" prefWidth="350.0" style="-fx-background-color: grey; -fx-border-color: fcdb00;" />
-	
-      
-      <CheckBox fx:id="chkNuevo" layoutX="267.0" layoutY="100.0" mnemonicParsing="false" text="Nuevo" textFill="WHITE" />
-      <CheckBox fx:id="chkDisponible" layoutX="554.0" layoutY="100.0" mnemonicParsing="false" text="Disponible" textFill="WHITE" />
-      <Button fx:id="btnRegistrar1" layoutX="469.0" layoutY="541.0" mnemonicParsing="false" onAction="#salir" prefHeight="32.0" prefWidth="186.0" style="-fx-border-radius: 16; -fx-background-radius: 16; -fx-background-color: fcdb00; -fx-border-color: fcdb00; -fx-text-fill: black;" text="Salir" wrapText="true">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </Button>
-   </children>
-</AnchorPane>
+<BorderPane prefHeight="607.0" prefWidth="788.0"
+            style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controlador.AñadirCocheControlador">
+
+    <top>
+        <HBox style="-fx-background-color: #0b0b0b; -fx-border-color: #3b3320; -fx-border-width: 0 0 1 0;">
+            <padding><Insets top="14" right="16" bottom="14" left="16"/></padding>
+
+            <VBox spacing="2">
+                <Text fill="#ffd666" text="Seville Luxury Renting">
+                    <font><Font size="14"/></font>
+                </Text>
+                <Text fill="#b5b5b5" text="Alta de vehículo">
+                    <font><Font size="11"/></font>
+                </Text>
+            </VBox>
+
+            <Region HBox.hgrow="ALWAYS"/>
+        </HBox>
+    </top>
+
+    <center>
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER"
+                    style="-fx-background-color: transparent;">
+            <content>
+                <StackPane>
+                    <padding><Insets top="18" right="18" bottom="18" left="18"/></padding>
+
+                    <VBox maxWidth="1000" spacing="16"
+                          style="-fx-background-color: #0b0b0b; -fx-background-radius: 18;
+                                 -fx-border-color: #3b3320; -fx-border-width: 1.2; -fx-border-radius: 18;">
+                        <padding><Insets top="18" right="18" bottom="18" left="18"/></padding>
+
+                        <Text fill="WHITE" text="Ingrese datos para añadir coche">
+                            <font><Font size="18"/></font>
+                        </Text>
+
+                        <HBox spacing="18">
+                            <CheckBox fx:id="chkNuevo" text="Nuevo" textFill="WHITE"/>
+                            <CheckBox fx:id="chkDisponible" text="Disponible" textFill="WHITE"/>
+                        </HBox>
+
+                        <GridPane hgap="14" vgap="10">
+                            <!-- Columna izquierda -->
+                            <Text fill="WHITE" text="Nº Bastidor" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                            <TextField fx:id="txtBastidor" promptText="Bastidor"
+                                       GridPane.rowIndex="1" GridPane.columnIndex="0"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Marca" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                            <TextField fx:id="txtMarca" promptText="Marca"
+                                       GridPane.rowIndex="3" GridPane.columnIndex="0"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Modelo" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+                            <TextField fx:id="txtModelo" promptText="Modelo"
+                                       GridPane.rowIndex="5" GridPane.columnIndex="0"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Matrícula" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+                            <TextField fx:id="txtMatricula" promptText="Matrícula"
+                                       GridPane.rowIndex="7" GridPane.columnIndex="0"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Precio diario" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+                            <TextField fx:id="txtPrecioDiario" promptText="0"
+                                       GridPane.rowIndex="9" GridPane.columnIndex="0"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <!-- Columna derecha -->
+                            <Text fill="WHITE" text="Descripción" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                            <TextField fx:id="txtDescripcion" promptText="Descripción"
+                                       GridPane.rowIndex="1" GridPane.columnIndex="1"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Plazas" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                            <TextField fx:id="txtPlazas" promptText="0"
+                                       GridPane.rowIndex="3" GridPane.columnIndex="1"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Potencia" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                            <TextField fx:id="txtPotencia" promptText="CV"
+                                       GridPane.rowIndex="5" GridPane.columnIndex="1"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="Motor" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+                            <TextField fx:id="txtMotor" promptText="Motor"
+                                       GridPane.rowIndex="7" GridPane.columnIndex="1"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                            <Text fill="WHITE" text="V. Máx" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+                            <TextField fx:id="txtVelocidadMax" promptText="km/h"
+                                       GridPane.rowIndex="9" GridPane.columnIndex="1"
+                                       style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                              -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                              -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+                        </GridPane>
+
+                        <Text fill="WHITE" text="URL Imagen"/>
+                        <TextField fx:id="txtImagenURL" promptText="ruta/imagen.jpg"
+                                   style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                          -fx-prompt-text-fill: #777777; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                          -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+
+                        <HBox spacing="12">
+                            <Button fx:id="btnRegistrar" mnemonicParsing="false" onAction="#registrarCoche" text="Registrar"
+                                    style="-fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-weight: bold;
+                                           -fx-background-radius: 18; -fx-padding: 10 18 10 18;"/>
+                            <Button fx:id="btnRegistrar1" mnemonicParsing="false" onAction="#salir" text="Salir"
+                                    style="-fx-background-color: transparent; -fx-border-color: #ffd666; -fx-border-width: 1.2;
+                                           -fx-text-fill: #ffd666; -fx-font-weight: bold;
+                                           -fx-background-radius: 18; -fx-border-radius: 18; -fx-padding: 10 18 10 18;"/>
+                        </HBox>
+
+                    </VBox>
+                </StackPane>
+            </content>
+        </ScrollPane>
+    </center>
+
+</BorderPane>
