--- a/slr-renting/src/main/java/vista/PanelAdmin.fxml
+++ b/slr-renting/src/main/java/vista/PanelAdmin.fxml
@@ -1,113 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="576.0" prefWidth="586.0"
-            style="-fx-background-color: BLACK;"
-            xmlns="http://javafx.com/javafx/24.0.1"
+<BorderPane prefHeight="576.0" prefWidth="586.0"
+            style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controlador.PanelAdminControlador">
 
-   <children>
+    <center>
+        <StackPane>
 
-      
-      <ImageView layoutX="0" layoutY="0"
-                 fitWidth="586" fitHeight="576"
-                 preserveRatio="true"
-                 opacity="0.15"
-                 pickOnBounds="false"
-                 style="-fx-alignment: center;">
-         <image>
-            <Image url="@logo.jpg" />
-         </image>
-      </ImageView>
+            <ImageView fitWidth="700" fitHeight="700" preserveRatio="true" opacity="0.12">
+                <image><Image url="@logo.jpg"/></image>
+            </ImageView>
 
-   
-      <HBox layoutX="0.0" layoutY="0.0"
-            prefWidth="586.0"
-            spacing="20.0"
-            style="-fx-padding: 10 20; -fx-background-color: #b99a41;">
+            <VBox maxWidth="820" spacing="18"
+                  style="-fx-background-color: rgba(11,11,11,0.65); -fx-background-radius: 18;
+                         -fx-border-color: #3b3320; -fx-border-width: 1.2; -fx-border-radius: 18;">
+                <padding>
+                    <Insets top="18" right="18" bottom="18" left="18"/>
+                </padding>
 
-         <children>
+                <HBox spacing="14" style="-fx-alignment: center-left;">
+                    <ImageView fitHeight="44" fitWidth="44" preserveRatio="true">
+                        <image><Image url="@logo.jpg"/></image>
+                    </ImageView>
 
-      
-            <HBox spacing="10.0" alignment="CENTER_LEFT">
-               <children>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" preserveRatio="true">
-                     <image>
-                        <Image url="@logo.jpg" />
-                     </image>
-                  </ImageView>
+                    <Text text="Panel de administración" fill="#ffd666">
+                        <font><Font size="22"/></font>
+                    </Text>
 
-                  <Text text="Panel de administración" fill="black">
-                     <font>
-                        <Font name="Gill Sans MT Condensed" size="26.0" />
-                     </font>
-                  </Text>
-               </children>
-            </HBox>
+                    <Pane HBox.hgrow="ALWAYS"/>
 
-            <Pane HBox.hgrow="ALWAYS" />
+                    <ComboBox fx:id="comboAdmin"
+                              promptText="Admin"
+                              prefWidth="140.0"
+                              onAction="#logout"
+                              style="-fx-background-color: #111111;
+                                     -fx-text-fill: #ffd666;
+                                     -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                     -fx-background-radius: 14; -fx-border-radius: 14; -fx-padding: 6 10 6 10;">
+                        <items>
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="Perfil"/>
+                                <String fx:value="Logout"/>
+                            </FXCollections>
+                        </items>
+                    </ComboBox>
+                </HBox>
 
-      
-            <ComboBox fx:id="comboAdmin"
-                      promptText="Admin"
-                      prefWidth="120.0"
-                      style="-fx-background-color: black; -fx-text-fill: #b99a41; -fx-background-radius: 6;"
-                      onAction="#logout">
+                <Text text="Accesos rápidos" fill="#b5b5b5">
+                    <font><Font size="12"/></font>
+                </Text>
 
-               <items>
-                  <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="Perfil" />
-                     <String fx:value="Logout" />
-                  </FXCollections>
-               </items>
-            </ComboBox>
+                <ButtonBar>
+                    <buttons>
+                        <Button mnemonicParsing="false" text="Alquiler"
+                                style="-fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-weight: bold;
+                                       -fx-background-radius: 18; -fx-padding: 10 18 10 18;"/>
 
-         </children>
-      </HBox>
+                        <Button mnemonicParsing="false" text="Usuarios" onAction="#irAUsuarios"
+                                style="-fx-background-color: #1a1a1a; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                       -fx-text-fill: #f5f5f5; -fx-font-weight: bold;
+                                       -fx-background-radius: 18; -fx-border-radius: 18;
+                                       -fx-padding: 10 18 10 18;"/>
 
-      
+                        <Button mnemonicParsing="false" text="Chofer" onAction="#irAChofer"
+                                style="-fx-background-color: #1a1a1a; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                       -fx-text-fill: #f5f5f5; -fx-font-weight: bold;
+                                       -fx-background-radius: 18; -fx-border-radius: 18;
+                                       -fx-padding: 10 18 10 18;"/>
 
-      <ButtonBar layoutX="62.0" layoutY="449.0"
-                 prefHeight="74.0" prefWidth="414.0">
-         <buttons>
+                        <Button mnemonicParsing="false" text="Coches" onAction="#irACoches"
+                                style="-fx-background-color: #1a1a1a; -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                       -fx-text-fill: #f5f5f5; -fx-font-weight: bold;
+                                       -fx-background-radius: 18; -fx-border-radius: 18;
+                                       -fx-padding: 10 18 10 18;"/>
+                    </buttons>
+                </ButtonBar>
+            </VBox>
 
-            <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="103.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Alquiler" />
+        </StackPane>
+    </center>
 
-            <Button mnemonicParsing="false" prefHeight="32.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Usuarios"
-                    onAction="#irAUsuarios" />
-
-            <Button mnemonicParsing="false" prefHeight="34.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Chofer"
-                    onAction="#irAChofer" />
-
-            <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="110.0"
-                    style="-fx-background-color: #b99a41;"
-                    text="Coches"
-                    onAction="#irACoches" />
-
-         </buttons>
-      </ButtonBar>
-
-   </children>
-</AnchorPane>
-
+</BorderPane>
