--- a/slr-renting/src/main/java/vista/PanelConfigReservaUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelConfigReservaUser.fxml
@@ -1,33 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="648.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controlador.PanelConfigReservaUserControlador">
-   <children>
-      <TableView fx:id="tblReservas" layoutY="95.0" prefHeight="273.0" prefWidth="648.0" style="-fx-background-color: black; -fx-border-color: #fcdb00; -fx-border-width: 6px;">
-        <columns>
-          <TableColumn fx:id="colBastidor" prefWidth="90.0" text="Bastidor" />
-          <TableColumn fx:id="colNif" prefWidth="100.0" text="NIF/NIE" />
-            <TableColumn fx:id="colFechaInicio" prefWidth="120.0" text="Fecha Inicio" />
-            <TableColumn fx:id="colFechaFin" prefWidth="120.0" text="Fecha Fin" />
-            <TableColumn fx:id="colPrecio" prefWidth="100.0" text="Precio Total" />
-            <TableColumn fx:id="colEstado" prefWidth="100.0" text="Estado" />
-        </columns>
-      </TableView>
+<BorderPane prefHeight="451.0" prefWidth="648.0"
+            style="-fx-background-color: black;"
+            xmlns="http://javafx.com/javafx/21"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controlador.PanelConfigReservaUserControlador">
 
-      <Text fill="WHITE" layoutX="7.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mis Reservas" wrappingWidth="634.6878051757812">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Text>
-      <Button fx:id="btnVolver" layoutX="401.0" layoutY="386.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" text="Volver" />
-      <ButtonBar layoutX="377.0" layoutY="141.0" prefHeight="34.0" prefWidth="261.0" />
-    <Button fx:id="btnCancelar" layoutX="181.0" layoutY="383.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="111.0" text="Cancelar Reserva" />
-   </children>
-</AnchorPane>
+    <top>
+        <HBox spacing="12"
+              style="-fx-background-color: #0b0b0b; -fx-border-color: #3b3320; -fx-border-width: 0 0 1 0;">
+            <padding>
+                <Insets top="14" right="16" bottom="14" left="16"/>
+            </padding>
+
+            <Text fill="#ffd666" text="Mis Reservas">
+                <font><Font size="20"/></font>
+            </Text>
+
+            <Region HBox.hgrow="ALWAYS"/>
+
+            <Button fx:id="btnVolver" mnemonicParsing="false" text="Volver"
+                    style="-fx-background-color: transparent; -fx-border-color: #ffd666; -fx-border-width: 1.2;
+                           -fx-text-fill: #ffd666; -fx-font-weight: bold;
+                           -fx-background-radius: 18; -fx-border-radius: 18; -fx-padding: 8 16 8 16;"/>
+        </HBox>
+    </top>
+
+    <center>
+        <StackPane>
+            <padding>
+                <Insets top="18" right="18" bottom="18" left="18"/>
+            </padding>
+
+            <VBox maxWidth="1100" spacing="12">
+
+                <TableView fx:id="tblReservas" VBox.vgrow="ALWAYS"
+                           style="
+                               -fx-background-color: #111111;
+                               -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                               -fx-background-radius: 14; -fx-border-radius: 14;
+
+                               -fx-control-inner-background: #101010;
+                               -fx-control-inner-background-alt: #151515;
+                               -fx-table-cell-border-color: #2a2416;
+                               -fx-selection-bar: #ffd666;
+                               -fx-selection-bar-non-focused: #3b3320;
+                               -fx-text-background-color: #f5f5f5;
+                           ">
+                    <columns>
+                        <TableColumn fx:id="colBastidor" prefWidth="110.0" text="Bastidor"/>
+                        <TableColumn fx:id="colNif" prefWidth="110.0" text="NIF/NIE"/>
+                        <TableColumn fx:id="colFechaInicio" prefWidth="130.0" text="Fecha Inicio"/>
+                        <TableColumn fx:id="colFechaFin" prefWidth="130.0" text="Fecha Fin"/>
+                        <TableColumn fx:id="colPrecio" prefWidth="120.0" text="Precio Total"/>
+                        <TableColumn fx:id="colEstado" prefWidth="120.0" text="Estado"/>
+                    </columns>
+                </TableView>
+
+                <HBox spacing="12">
+                    <Region HBox.hgrow="ALWAYS"/>
+
+                    <Button fx:id="btnCancelar" mnemonicParsing="false" text="Cancelar Reserva"
+                            style="-fx-background-color: transparent; -fx-border-color: #b34a4a; -fx-border-width: 1.2;
+                                   -fx-text-fill: #ffb3b3; -fx-font-weight: bold;
+                                   -fx-background-radius: 18; -fx-border-radius: 18; -fx-padding: 8 16 8 16;"/>
+                </HBox>
+
+            </VBox>
+        </StackPane>
+    </center>
+
+</BorderPane>
