--- a/slr-renting/src/main/java/vista/PanelConfigUser.fxml
+++ b/slr-renting/src/main/java/vista/PanelConfigUser.fxml
@@ -1,98 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="fondo" fx:id="paneConfig" prefHeight="620.0" prefWidth="620.0"
+<BorderPane prefHeight="620.0" prefWidth="620.0"
             style="-fx-background-color: black;"
-            xmlns="http://javafx.com/javafx/24.0.1"
+            xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controlador.PanelConfigUserControlador">
 
-   <children>
+    <center>
+        <StackPane>
+            <padding>
+                <Insets top="24" right="24" bottom="24" left="24"/>
+            </padding>
 
-           <Line endX="170.0" endY="49.0" layoutX="-2.0" layoutY="-1.0"
-            startX="167.7" startY="583.0" stroke="#fcdb00"/>
-      <Line endX="170.0" endY="49.0" layoutX="259.0"
-            startX="170.0" startY="581.0" stroke="#fad900"/>
-      <Line endX="-100.5" endY="341.5" layoutX="270.0"
-            layoutY="-292.0" startX="158.5" startY="341.5" stroke="#fcdb00"/>
+            <VBox maxWidth="520" spacing="16"
+                  style="-fx-background-color: #0b0b0b; -fx-background-radius: 18;
+                         -fx-border-color: #3b3320; -fx-border-width: 1.2; -fx-border-radius: 18;">
+                <padding>
+                    <Insets top="20" right="20" bottom="20" left="20"/>
+                </padding>
 
-           <ImageView fitHeight="66.0" fitWidth="98.0"
-                 layoutX="177.0" layoutY="60.0"
-                 preserveRatio="true">
-         <image>
-            <Image url="@logo.jpg"/>
-         </image>
-      </ImageView>
+                <HBox spacing="12" style="-fx-alignment: center-left;">
+                    <ImageView fitHeight="54" fitWidth="54" preserveRatio="true">
+                        <image><Image url="@logo.jpg"/></image>
+                    </ImageView>
 
-     
-      <Text fill="WHITE" layoutX="225.0" layoutY="140.0" text="Tu Perfil"/>
-      <Text fill="#c4c4c2" layoutX="190.0" layoutY="165.0" text="Modifica tus datos personales"/>
+                    <VBox spacing="2">
+                        <Text fill="#ffd666" text="Tu Perfil">
+                            <font><Font size="20"/></font>
+                        </Text>
+                        <Text fill="#b5b5b5" text="Modifica tus datos personales"/>
+                    </VBox>
+                </HBox>
 
-     
-      <Text fill="WHITE" layoutX="185.0" layoutY="195.0" text="Nombre Completo"/>
-      <TextField fx:id="txtNombre"
-                 layoutX="185.0" layoutY="205.0"
-                 prefWidth="222.0"
-                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+                <GridPane hgap="12" vgap="10">
 
-     
-      <Text fill="WHITE" layoutX="185.0" layoutY="250.0" text="Email"/>
-      <TextField fx:id="txtCorreo"
-                 layoutX="185.0" layoutY="260.0"
-                 prefWidth="222.0"
-                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+                    <Text fill="WHITE" text="Nombre completo" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                    <TextField fx:id="txtNombre" promptText="Nombre y apellidos"
+                               GridPane.rowIndex="1" GridPane.columnIndex="0"
+                               style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                      -fx-prompt-text-fill: #777777;
+                                      -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                      -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
 
-     
-      <Text fill="WHITE" layoutX="185.0" layoutY="305.0" text="NIF/NIE"/>
-      <TextField fx:id="txtNif"
-                 layoutX="185.0" layoutY="315.0"
-                 prefWidth="222.0"
-                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+                    <Text fill="WHITE" text="Email" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                    <TextField fx:id="txtCorreo" promptText="correo@ejemplo.com"
+                               GridPane.rowIndex="3" GridPane.columnIndex="0"
+                               style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                      -fx-prompt-text-fill: #777777;
+                                      -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                      -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
 
-      
-      <Text fill="WHITE" layoutX="185.0" layoutY="360.0" text="Teléfono"/>
-      <TextField fx:id="txtTelefono"
-                 layoutX="185.0" layoutY="370.0"
-                 prefWidth="222.0"
-                 style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+                    <Text fill="WHITE" text="NIF/NIE" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+                    <TextField fx:id="txtNif" promptText="00000000X"
+                               GridPane.rowIndex="5" GridPane.columnIndex="0"
+                               style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                      -fx-prompt-text-fill: #777777;
+                                      -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                      -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
 
-      
-      <Text fill="WHITE" layoutX="185.0" layoutY="415.0" text="Contraseña"/>
-      <PasswordField fx:id="txtPassword"
-                     layoutX="185.0" layoutY="425.0"
-                     prefWidth="222.0"
-                     style="-fx-background-color: grey; -fx-border-color: fcdb00;"/>
+                    <Text fill="WHITE" text="Teléfono" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+                    <TextField fx:id="txtTelefono" promptText="+34..."
+                               GridPane.rowIndex="7" GridPane.columnIndex="0"
+                               style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                      -fx-prompt-text-fill: #777777;
+                                      -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                      -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
 
-      
-      <CheckBox fx:id="chkCarnet"
-                text="Dispone de carnet de conducir"
-                textFill="WHITE"
-                layoutX="185.0" layoutY="465.0"
-                style="-fx-background-color: #2b2b2b; -fx-border-color: fcdb00;"/>
+                    <Text fill="WHITE" text="Contraseña" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+                    <PasswordField fx:id="txtPassword" promptText="••••••••"
+                                   GridPane.rowIndex="9" GridPane.columnIndex="0"
+                                   style="-fx-background-color: #111111; -fx-text-fill: #f5f5f5;
+                                          -fx-prompt-text-fill: #777777;
+                                          -fx-border-color: #3b3320; -fx-border-width: 1.2;
+                                          -fx-background-radius: 16; -fx-border-radius: 16; -fx-padding: 10 14 10 14;"/>
+                </GridPane>
 
-      
-      <Button fx:id="btnGuardar"
-              layoutX="205.0" layoutY="515.0"
-              prefWidth="186.0" prefHeight="32.0"
-              style="-fx-background-color: grey; -fx-border-color: fcdb00; -fx-text-fill: black;"
-              text="Guardar Cambios"/>
+                <CheckBox fx:id="chkCarnet" text="Dispone de carnet de conducir" textFill="WHITE"
+                          style="-fx-text-fill: #f5f5f5;"/>
 
-      
-      <Button fx:id="btnVolver"
-              layoutX="205.0" layoutY="560.0"
-              prefWidth="186.0" prefHeight="32.0"
-              style="-fx-background-color: black; -fx-border-color: fcdb00; -fx-text-fill: white;"
-              text="Volver"/>
+                <HBox spacing="12">
+                    <Button fx:id="btnGuardar" mnemonicParsing="false" text="Guardar Cambios"
+                            style="-fx-background-color: #ffd666; -fx-text-fill: #111111; -fx-font-weight: bold;
+                                   -fx-background-radius: 18; -fx-padding: 10 18 10 18;"/>
 
-   </children>
+                    <Button fx:id="btnVolver" mnemonicParsing="false" text="Volver"
+                            style="-fx-background-color: transparent; -fx-border-color: #ffd666; -fx-border-width: 1.2;
+                                   -fx-text-fill: #ffd666; -fx-font-weight: bold;
+                                   -fx-background-radius: 18; -fx-border-radius: 18; -fx-padding: 10 18 10 18;"/>
+                </HBox>
 
-</AnchorPane>
+            </VBox>
+        </StackPane>
+    </center>
+
+</BorderPane>
